tests/expectations/compiler/finalize/read_write_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372000]: invalid assignment target
    --> compiler-test:11:9
     |
  11 |         balances[addr] = amount;
     |         ^^^^^^^^^^^^^^"""]
